修复音乐未缓存完成切换其他音乐出现的bug

--- a/MYMusicPlayer/Base.lproj/Main.storyboard
+++ b/MYMusicPlayer/Base.lproj/Main.storyboard
@@ -135,14 +135,14 @@
                         <constraints>
                             <constraint firstItem="EuJ-5j-ZQl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Dgz-Mr-y3V"/>
                             <constraint firstItem="gOQ-p8-3O2" firstAttribute="top" secondItem="tBg-Iy-U8U" secondAttribute="bottom" constant="14" id="EeK-wS-mTv"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="gOQ-p8-3O2" secondAttribute="bottom" id="KHs-6L-6fA"/>
                             <constraint firstAttribute="trailing" secondItem="6bT-wC-nBr" secondAttribute="trailing" id="NFF-Bk-h2s"/>
                             <constraint firstItem="6bT-wC-nBr" firstAttribute="centerY" secondItem="1R0-7P-Qm6" secondAttribute="centerY" id="Nmc-Ga-y6u"/>
                             <constraint firstItem="gOQ-p8-3O2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="QZd-jB-Fkt"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="gOQ-p8-3O2" secondAttribute="bottom" id="SMh-dc-LKR"/>
                             <constraint firstItem="1R0-7P-Qm6" firstAttribute="leading" secondItem="tBg-Iy-U8U" secondAttribute="trailing" constant="9" id="VSB-ti-OoJ"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="EuJ-5j-ZQl" secondAttribute="bottom" constant="64" id="YET-bU-zQt"/>
                             <constraint firstAttribute="trailing" secondItem="EuJ-5j-ZQl" secondAttribute="trailing" id="Ydn-Ke-gYI"/>
                             <constraint firstAttribute="trailing" secondItem="gOQ-p8-3O2" secondAttribute="trailing" id="Z4s-Jz-5xi"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="EuJ-5j-ZQl" secondAttribute="bottom" constant="64" id="dnT-qO-cDV"/>
                             <constraint firstItem="6bT-wC-nBr" firstAttribute="leading" secondItem="1R0-7P-Qm6" secondAttribute="trailing" constant="9" id="lbU-Sa-Hh7"/>
                             <constraint firstItem="1R0-7P-Qm6" firstAttribute="centerY" secondItem="tBg-Iy-U8U" secondAttribute="centerY" id="w1y-2E-lnm"/>
                             <constraint firstItem="gOQ-p8-3O2" firstAttribute="top" secondItem="EuJ-5j-ZQl" secondAttribute="bottom" id="wjZ-Fo-WRw"/>
